# palletizer-rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
server/: Cargo.toml
server/src/: api_v1.rs  config.rs  git.rs  logging.rs  main.rs  server.rs  tls.rs
src/: config.rs  error.rs  index.rs  lib.rs  manifest.rs  registry.rs  util.rs
tools/: Cargo.toml
