[package]
name = "palletizer"
description = "self-hosted Cargo registry"
version = "0.1.3"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/palletizer-rs"
edition = "2018"

[dependencies]
fs2 = "0.4.3"
git2 = "0.13.12"
libflate = "1.0.3"
sha2 = "0.9.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tar = "0.4.30"
thiserror = "1.0.22"
toml = "0.5.7"

[workspace]
members = ["server", "tools"]
