[package]
name = "palletizer"
description = "self-hosted Cargo registry"
version = "0.2.4"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/palletizer-rs"
edition = "2018"

[dependencies]
fs2 = "0.4.3"
git2 = "0.15.0"
libflate = "1.2.0"
sha2 = "0.10.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tar = "0.4.30"
thiserror = "1.0.22"
toml = "0.5.7"
walkdir = "2.3.2"

[workspace]
members = ["server", "tools"]
