[package]
name = "palletizer"
description = "self-hosted Cargo registry"
version = "0.2.6"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/palletizer-rs"
edition = "2024"

[dependencies]
fs2 = "0.4.3"
git2 = "0.20.4"
libflate = "2.3.0"
sha2 = "0.11.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tar = "0.4.30"
thiserror = "2.0.18"
toml = "1.1.2"
walkdir = "2.3.2"

[workspace]
members = ["server", "tools"]
