[package]
name = "palletizer-server"
description = "API and download server for palletizer, a self hosted cargo registry"
version = "0.2.5"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/palletizer-rs"
edition = "2024"

[features]
default = ["tls"]
tls = ["openssl", "tokio-openssl"]
static-openssl = ["openssl/vendored"]

[dependencies]
chrono = "0.4.19"
env_logger = "0.11.10"
futures = { version = "0.3.15", default-features = false, features = ["alloc"] }
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.20", features = ["http1", "http2", "server-auto", "tokio"] }
log = "0.4.14"
openssl = { version = "0.10.48", optional = true }
palletizer = { version = "0.2.5", path = ".." }
semver = "1.0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
sha2 = "0.11.0"
structopt = "0.3.20"
tokio = { version = "1.24.2", features = ["net", "process", "rt", "rt-multi-thread"] }
tokio-openssl = { version = "0.6.2", optional = true }
toml = "1.1.2"
