[package]
name = "palletizer-tools"
description = "CLI tools for palletizer, a self hosted cargo registry"
version = "0.2.5"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/palletizer-rs"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
palletizer = { version = "0.2.5", path = ".." }
